// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'contains backtick (1) - delimiter is …' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum do\\\`or sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'contains backtick (2) - delimiter is …' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum do\\\`or sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'contains single quote (1) - delimiter…' > expectation 1`] = `
"<template>
  <div>
    <div v-bind:class="'lorem ipsum do\\'or sit amet'">
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'contains single quote (2) - delimiter…' > expectation 1`] = `
"<template>
  <div>
    <div v-bind:class="'lorem ipsum do\\'or sit amet'">
      <slot></slot>
    </div>
  </div>
</template>
"
`;
